--- a/app/views/shared/a/_menu.html.erb
+++ b/app/views/shared/a/_menu.html.erb
@@ -13,6 +13,28 @@
     <%= link_to(strategic_planning_path(id: 1), class: "list-group-item #{is_strategic_planning_path}") do %>
       <%= fw_icon('table', 'Planeación Estratégica') %>
     <% end %>
+      <hr>
+    <% if policy(Work).index? %>
+      <%= link_to(works_path, class: "list-group-item #{is_work_path}") do %>
+        <%= fw_icon('users', 'Obras') %>
+      <% end %>
+    <% end %>
+
+    <% if policy(Provider).index? %>
+      <%= link_to(providers_path, class: "list-group-item #{is_provider_path}") do %>
+        <%= fw_icon('users', 'Proveedores') %>
+      <% end %>
+    <% end %>
+
+
+    <% if policy(Input).index? %>
+      <%= link_to(inputs_path, class: "list-group-item #{is_input_path}") do %>
+        <%= fw_icon('users', 'Insumos') %>
+      <% end %>
+    <% end %>
+
+    <hr>
+
 
     <% if policy(Contractor).index? %>
       <%= link_to(contractors_path, class: "list-group-item #{is_contractor_path}") do %>
@@ -21,7 +43,7 @@
     <% end %>
 
     <% if policy(Contract).index? %>
-      <%= link_to(contracts_path(query1: nil, query2: nil, query3: nil), class: "list-group-item #{is_contracts_path}") do %>
+      <%= link_to(contracts_path, class: "list-group-item #{is_contracts_path}") do %>
         <%= fw_icon('handshake-o', 'Contratos') %>
       <% end %>
     <% end %>
@@ -47,6 +69,12 @@
     <% if policy(ContractorType).index? %>
       <%= link_to(contractor_types_path, class: "list-group-item #{is_contractor_types_path}") do %>
         <%= fw_icon('users', 'Tipos de contratista') %>
+      <% end %>
+    <% end %>
+
+    <% if policy(WorkType).index? %>
+      <%= link_to(work_types_path, class: "list-group-item #{is_work_types_path}") do %>
+        <%= fw_icon('users', 'Tipos de obra') %>
       <% end %>
     <% end %>
 
